# cywhispercpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
src/cywhisper/: __init__.py
src/cywhisper/whisper/: __init__.py
src/cywhispercpp/: __init__.py  cywhispercpp.pyx
src/cywhispercpp/models/: README.md  __main__.py
src/cywhispercpp/whisper/: __init__.py
src/whisper_cpp/: __init__.py  __main__.py  whisper.pyx
src/whisper_cpp/models/: __init__.py  download_ggml_model.py
src/whisper_cpp/whisper/: __init__.py
tests/: test_build_run_cpp.py  test_whisper_basic.py  test_whisper_functional.py
tests/test_cpp/: CMakeLists.txt  test_whisper.cpp
